--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                         <div class="row">
                             <div class="input-field col s12 center">
                                 <img src="" alt="" class="circle responsive-img valign profile-image-login">
-                                <p class="center login-form-text">Blog</p>
+                                <p class="center login-form-text">E-commerce</p>
                                 <p class="center login-form-text">Login As Admin</p>
                             </div>
                         </div>
