--- a/checkout.html
+++ b/checkout.html
@@ -184,7 +184,7 @@
 			methods: {
 				getCart() {
 					let self =this
-					axios.get('http://localhost:3000/carts/show')
+					axios.get('https://api_ecommerce.alprak.net/carts/show')
 					.then(dataCarts=>{
 						const {data} = dataCarts
 						self.items = data
@@ -216,7 +216,7 @@
 					}						
 					
 
-					axios.post('http://localhost:3000/carts/remove',item)
+					axios.post('https://api_ecommerce.alprak.net/carts/remove',item)
 					.then(response=>{
 						console.log("=====",response)
 					})
@@ -226,7 +226,7 @@
 				},
 				getItem() {
 					let self =this
-					axios.get('http://localhost:3000/items/show')
+					axios.get('https://api_ecommerce.alprak.net/items/show')
 					.then(dataItems=>{
 						this.shops = dataItems.data
 						console.log("thshop",this.shops)
@@ -237,7 +237,7 @@
 				},
 				clearCart() {
 					this.seen = false
-					axios.delete('http://localhost:3000/carts/clear')
+					axios.delete('https://api_ecommerce.alprak.net/carts/clear')
 					.then(response=>{
 						console.log(response)
 					})
