--- a/upload.html
+++ b/upload.html
@@ -152,7 +152,7 @@
 			methods: {
 				getCart() {
 					let self =this
-					axios.get('http://localhost:3000/carts/show')
+					axios.get('https://api_ecommerce.alprak.net/carts/show')
 					.then(dataCarts=>{
 						const {data} = dataCarts
 						self.items = data
@@ -184,7 +184,7 @@
 					}						
 					
 
-					axios.post('http://localhost:3000/carts/remove',item)
+					axios.post('https://api_ecommerce.alprak.net/carts/remove',item)
 					.then(response=>{
 						console.log("=====",response)
 					})
@@ -194,7 +194,7 @@
 				},
 				getItem() {
 					let self =this
-					axios.get('http://localhost:3000/items/show')
+					axios.get('https://api_ecommerce.alprak.net/items/show')
 					.then(dataItems=>{
 						this.shops = dataItems.data
 						console.log("thshop",this.shops)
@@ -221,7 +221,7 @@
 							formData.append("price",this.price)
 
 							axios.post(
-								'http://localhost:3000/items/upload',
+								'https://api_ecommerce.alprak.net/items/upload',
 								formData,
 								{
 									headers: {
